# bio-data-explorer

./: .gitignore  README.md  desc  desc.md  gene_explorer.py  genes.txt  pyproject.toml  requirements.md  sample_genes.fasta
data/: my_variants.vcf  sample_alignments.bam  sample_alignments.bam.bai  sample_alignments.sam  sample_genes.fasta  sample_genes.fastq  sample_variants.vcf  sorted_sample_alignments.bam  sorted_sample_alignments.bam.bai
data/sam-bam/: sample_alignments.bam  sample_alignments.sam
data/vcf/: sample_variants.vcf
docs/: bam-sam-details  fasta-details.md  fastq-details.md  requirements.md  vcf-details.md
src/: sam_bam_parser.py
src/bio_data_explorer/: blast_client.py  cli.py  fasta_parser.py  fastq_parser  fastq_parser.py  gene_explorer.py  sam_bam_parser.py  vcf_parser.py
src/bio_data_explorer/config/: path_config.py
src/bio_data_explorer/util/: cli_util.py
src/bio_data_explorer/utils/: path_utils.py
tests/: test_blast_client.py  test_fasta_parser.py  test_fastq_parser.py  test_gene_explorer.py  test_sam_bam_parser.py  test_vcf_parser.py
tests/config/: path_config.py
tests/data/: sample_genes_bad_header.fasta  sample_genes_bad_sequences.fasta
tests/data/fasta/: sample_genes_bad_sequences.fasta
tests/data/fastq/: sample_genes_good_format.fastq  sample_genes_high_unknown_bases.fastq  sample_genes_short_length.fastq
