[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-data-explorer"
version = "0.1.0"
description = "A tool for exploring common bioinformatics data formats"
authors = [
  { name = "William Perlichek", email = "williamperlichek@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
